change port jenkins

--- a/src/main/docker-compose.yml
+++ b/src/main/docker-compose.yml
@@ -8,7 +8,8 @@ services:
         volumes: 
             - ./jenkins-data:/var/jenkins_home
             - /var/run/docker.sock:var/run/docker.sock
-        ports: "8080:8080"
+        ports: 
+            - "8080:8080"
 
     app:
         build: ./ressource
